--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -136,7 +136,6 @@
 <p><span id="Annotation"></span>
 </p>
 <h3><span class="mw-headline" id="Beschriftung_2">Beschriftung</span></h3>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Schnittfl&auml;chendarstellung</b>: Kennzeichnungsart f&uuml;r Schnittfl&auml;chen. Die Optionen sind:
 <ul><li><i>Ausblenden</i>: Es gibt keine sichtbare Schnittfl&auml;che.</li>
 <li><i>Farbf&uuml;llung</i>: Die geschnittene Fl&auml;che erh&auml;lt die f&uuml;r <b>Schnittfl&auml;che</b> gesetzte Farbe</li>
@@ -151,17 +150,16 @@
 <li><b>Umrandung der Detailansicht anzeigen</b>: Diese Checkbox legt fest, ob die Umrandungslinie einer Detailansicht dargestellt wird oder nicht. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
 <li><b>Detailauswahlrahmen anzeigen</b>: Diese Checkbox legt fest, ob die Linie f&uuml;r die Detailauswahl in der Basisansicht dargestellt wird oder nicht. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
 <li><b>Form des Hinweisfeldes</b>: Form des <a href="../de/TechDraw_Balloon.html" title="TechDraw Balloon/de">Hinweisfeldes</a> (Balloon).</li>
-<li><b>Ende der Linie des Hinweisfeldes</b>: Standardsymbol f&uuml;r Hinweislinienenden, siehe <a href="../de/TechDraw_Balloon.html#Eigenschaften" title="TechDraw Balloon/de">Eigenschaften des Hinweisfeldes</a>.</li>
-<li><b>Knickl&auml;nge der Linie des Hinweisfeldes</b>: L&auml;nge der Bezugslinie am Knick der Hinweislinie.</li>
-<li><b>Hinweisfeld mit senkrechtem Dreieck</b>: Wenn das <b>Ende der Linie des Hinweisfeldes</b> ein <i>gef&uuml;lltes Dreieck</i> ist, kann das Dreieck nur eine vertikale oder horizontale Ausrichtung erhalten, wenn das Hinweisfeld bewegt wird.</li>
+<li><b>Ende der Hinweislinie</b>: Standardsymbol f&uuml;r Hinweislinienenden, siehe <a href="../de/TechDraw_Balloon.html#Properties" title="TechDraw Balloon/de">Eigenschaften des Hinweisfeldes</a>.</li>
+<li><b>Ansatzl&auml;nge der Hinweislinie</b>: L&auml;nge der Bezugslinie am Knick der Hinweislinie.</li>
+<li><b>Hinweisfeld mit orthogonalem Dreieck</b>: Wenn das <b>Ende der Linie des Hinweisfeldes</b> ein <i>gef&uuml;lltes Dreieck</i> ist, kann das Dreieck nur eine vertikale oder horizontale Ausrichtung erhalten, wenn das Hinweisfeld bewegt wird.</li>
 <li><b>Hinweislinie automatisch horizontal</b>: Legt fest, dass das letzte Segment der <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a> (Bezugslinie) horizontal ist.</li>
-<li><b>Art der Bruchdarstellung in unterbrochenen Ansichten</b>: Die Standarddarstellung der Bruchlinien in <a href="../de/TechDraw_BrokenView.html" title="TechDraw BrokenView/de">unterbrochenen Ansichten</a>: <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>
+<li><b>Darstellung der Bruchkanten in unterbrochenen Ansichten</b>: Die Standarddarstellung der Bruchlinien in <a href="../de/TechDraw_BrokenView.html" title="TechDraw BrokenView/de">unterbrochenen Ansichten</a>: <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>
 <ul><li><i>Keine Bruchkanten</i></li>
 <li><i>Zickzack-Linien</i></li>
 <li><i>Einfache Linien</i></li></ul></li>
-<li><b>Mittelpunktsmarkierungen darstellen</b>: Bogenmittenmarkierungen in Ansichten anzeigen.</li>
+<li><b>Mittelpunktmarkierungen anzeigen</b>: Bogenmittenmarkierungen in Ansichten anzeigen.</li>
 <li><b>Mittelpunktsmarkierungen drucken</b>: Bogenmittenmarkierungen in der Druckausgabe anzeigen.</li></ul>
-</div>
 <p><span id="Lines"></span>
 </p>
 <h3><span class="mw-headline" id="Linien">Linien</span></h3>
@@ -282,13 +280,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121700
+Cached time: 20260112122458
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.156 seconds
-Preprocessor visited node count: 633/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.145 seconds
+Preprocessor visited node count: 632/1000000
 Post&#8208;expand include size: 28248/2097152 bytes
 Template argument size: 10597/2097152 bytes
 Highest expansion depth: 5/100
@@ -298,19 +296,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.183      1 -total
- 21.92%    5.958      1 Template:TechDraw_Tools_navi/de
- 19.60%    5.327     33 Template:Version/de
- 13.67%    3.715      2 Template:Docnav/de
- 13.60%    3.698      2 Template:Navigation_menu_2
- 10.78%    2.931      2 Template:MenuCommand
-  8.22%    2.234      1 Template:TOCright
-  6.41%    1.742      1 Template:Userdocnavi/de
-  5.90%    1.604      2 Template:Button
-  5.02%    1.366      1 Template:KEY
+100.00%   23.434      1 -total
+ 28.64%    6.711      1 Template:TechDraw_Tools_navi/de
+ 17.32%    4.058      2 Template:Navigation_menu_2
+ 14.84%    3.477      1 Template:Userdocnavi/de
+ 12.38%    2.901     33 Template:Version/de
+ 11.46%    2.686      2 Template:Docnav/de
+  6.67%    1.562      1 Template:KEY
+  6.35%    1.487      2 Template:MenuCommand
+  5.02%    1.176      1 Template:TOCright
+  4.99%    1.169      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112121700 and revision id 1737434. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112122457 and revision id 1737442. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
