--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -177,7 +177,6 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Preferences_TechDraw_Page_Colors.png&amp;filetimestamp=20240828074449&amp;.html" class="mw-file-description"><img src="../File/Preferences_TechDraw_Page_Colors.png" decoding="async" width="350" height="302" class="mw-file-element" data-file-width="550" data-file-height="474"></a><figcaption>Farbeinstellungen</figcaption></figure>
 <p>Einstellung der Standardfarben f&uuml;r neue Zeichnungsbl&auml;tter:
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Normal</b>: Normale Linienfarbe.</li>
 <li><b>Vorausgew&auml;hlt</b>: Vorausgew&auml;hlte Farbe. Die Farbe, die verwendet wird, um Objekte hervorzuheben, wenn die Maus dar&uuml;ber bewegt wird.</li>
 <li><b>Ausgew&auml;hlt</b>: Farbe f&uuml;r ausgew&auml;hlte Objekte.</li>
@@ -185,7 +184,7 @@
 <li><b>Ma&szlig;eintrag</b>: Farbe der Linien und Texte f&uuml;r Ma&szlig;eintr&auml;ge.</li>
 <li><b>Mittellinie</b>: Farbe f&uuml;r <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinien</a>.</li>
 <li><b>Detailauswahl</b>: Linienfarbe f&uuml;r die Umrissform von <a href="../de/TechDraw_DetailView.html" title="TechDraw DetailView/de">Detailansichten</a>.</li>
-<li><b>Rasterfarbe</b>: Farbe f&uuml;r alle Seitenraster.</li>
+<li><b>Farbe des Rasters</b>: Farbe f&uuml;r alle Seitenraster.</li>
 <li><b>Vorlagenunterstrich</b>: Farbe f&uuml;r den Unterstrich, der in einer Vorlage die editierbaren Texte kennzeichnet.<span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
 <li><b>Verdeckte Kante</b>: Farbe der verdeckten Linie. Diese Farbe wird f&uuml;r alle Arten von <a href="#HLR">Verdeckten Linien</a> verwendet.</li>
 <li><b>Schnittfl&auml;che</b>: Farbe f&uuml;r Schnittfl&auml;chen in <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansichten</a>. Wird nur verwendet, wenn die Einstellung <b>Schnittfl&auml;chendarstellung</b> auf <i>Farbf&uuml;llung</i> gesetzt ist.</li>
@@ -198,7 +197,6 @@
 <li><b>Hell auf dunkel</b>: Wenn aktiviert, erhalten Texte und Linien eine helle Farbe. Wird verwendet, wenn die "Blattfarbe" dunkel ist. Transparente oder hell eingef&auml;rbte Fl&auml;chen werden f&uuml;r diese Option empfohlen. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li><b>Einfarbig</b>: Wenn aktiviert, wird die eingestellte Farbe f&uuml;r alle Texte und Linien verwendet. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li><b>Blattfarbe</b>: Die Hintergrundfarbe des Zeichenblattes. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
-</div>
 <p><span id="HLR"></span>
 </p>
 <h2><span id="Ausblenden_verdeckter_Kanten_.28HLR.29"></span><span class="mw-headline" id="Ausblenden_verdeckter_Kanten_(HLR)">Ausblenden verdeckter Kanten (HLR)</span></h2>
@@ -280,13 +278,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112122458
+Cached time: 20260112122833
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.145 seconds
-Preprocessor visited node count: 632/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.127 seconds
+Preprocessor visited node count: 631/1000000
 Post&#8208;expand include size: 28248/2097152 bytes
 Template argument size: 10597/2097152 bytes
 Highest expansion depth: 5/100
@@ -296,19 +294,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.434      1 -total
- 28.64%    6.711      1 Template:TechDraw_Tools_navi/de
- 17.32%    4.058      2 Template:Navigation_menu_2
- 14.84%    3.477      1 Template:Userdocnavi/de
- 12.38%    2.901     33 Template:Version/de
- 11.46%    2.686      2 Template:Docnav/de
-  6.67%    1.562      1 Template:KEY
-  6.35%    1.487      2 Template:MenuCommand
-  5.02%    1.176      1 Template:TOCright
-  4.99%    1.169      2 Template:Button
+100.00%   21.007      1 -total
+ 34.17%    7.179      1 Template:TechDraw_Tools_navi/de
+ 17.76%    3.730      2 Template:Navigation_menu_2
+ 12.64%    2.656      2 Template:Docnav/de
+ 10.72%    2.252     33 Template:Version/de
+  9.96%    2.092      1 Template:Userdocnavi/de
+  6.35%    1.334      2 Template:MenuCommand
+  6.12%    1.286      1 Template:TOCright
+  4.77%    1.001      2 Template:Button
+  4.74%    0.995      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112122457 and revision id 1737442. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112122832 and revision id 1737444. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
