--- a/wiki/it/Sketcher_SketchObject.html
+++ b/wiki/it/Sketcher_SketchObject.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher SketchObject/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Sketcher+SketchObject&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher SketchObject (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher SketchObject (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Sketcher_SketchObject.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher SketchObject (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher SketchObject (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Obiekt szkicu (97% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../fr/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher SketchObject (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Obiekt szkicu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Sketcher_SketchObject.html" class="mw-pt-progress mw-pt-progress--med" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; SketchObject (&#1054;&#1073;&#1098;&#1077;&#1082;&#1090;&#1069;&#1089;&#1082;&#1080;&#1079;&#1072;) (65% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
@@ -61,9 +61,7 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Visual Layer List</b><span style="font-size:80%;"> (<code>BadType</code>)</span>:</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Object Style</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Auto Color</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: se true, l'oggetto verr&agrave; colorato in base alle preferenze dell'utente. Impostare su <code>false</code> per specificare il colore in modo esplicito.</li></ul>
-</div>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Auto Color</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: se true, l'oggetto verr&agrave; colorato in base alle <a href="../it/Sketcher_Preferences.html#Appearance" title="Sketcher Preferences/it">preferenze utente</a>, <span style="font-size:small;"><a href="../it/Release_notes_1.1.html" title="Release notes 1.1/it">disponibile dalla versione 1.1</a></span>: le propriet&agrave; <span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Line Color</b>, <span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Point Color</b> e <span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Shape Appearance</b> vengono quindi nascoste nella vista propriet&agrave;. Impostare su <code>false</code> per specificare i colori in modo esplicito.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Visibility automation</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Vista</span><b>Editing Workbench</b><span style="font-size:80%;"> (<code>String</code>)</span>: nome dell'ambiente da attivare durante la modifica dello schizzo; il valore predefinito &egrave; <code>SketcherWorkbench</code>.</li>
@@ -145,35 +143,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251108185929
+Cached time: 20260112123046
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 1624/1000000
-Post&#8208;expand include size: 38945/2097152 bytes
-Template argument size: 11484/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 1749/1000000
+Post&#8208;expand include size: 39730/2097152 bytes
+Template argument size: 11594/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3330/5000000 bytes
+Unstrip post&#8208;expand size: 3349/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.660      1 -total
- 19.75%   10.597     25 Template:Variable
- 16.37%    8.782     15 Template:PropertyView
- 14.13%    7.582      1 Template:Sketcher_Tools_navi/it
- 12.35%    6.627     10 Template:PropertyData
-  9.68%    5.196      1 Template:Document_objects_navi/it
-  9.30%    4.988      3 Template:Navigation_menu_2
-  6.94%    3.723      1 Template:Userdocnavi/it
-  6.55%    3.515      8 Template:TitleProperty
-  4.89%    2.626     36 Template:Incode
+100.00%   46.709      1 -total
+ 18.98%    8.865     28 Template:Variable
+ 16.01%    7.480     18 Template:PropertyView
+ 14.38%    6.715      1 Template:Sketcher_Tools_navi/it
+ 12.00%    5.607     10 Template:PropertyData
+ 11.26%    5.258      3 Template:Navigation_menu_2
+  8.40%    3.922      1 Template:Userdocnavi/it
+  7.54%    3.523      5 Template:Value
+  5.83%    2.721      1 Template:Document_objects_navi/it
+  5.15%    2.408      8 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:168820-0!canonical and timestamp 20251108185929 and revision id 1683765. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:168820-0!canonical and timestamp 20260112123046 and revision id 1737452. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
