--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -5,7 +5,7 @@
 <li><a href="../it/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--med" title="Manuale:Modellazione per la progettazione del prodotto (27% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Modelowanie dla projektowania produktu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Modeling for product design (13% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1052;&#1086;&#1076;&#1077;&#1083;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; &#1076;&#1083;&#1103; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1103; &#1087;&#1088;&#1086;&#1076;&#1091;&#1082;&#1090;&#1072; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#25163;&#20876;&#65306;&#20026;&#20135;&#21697;&#35774;&#35745;&#24314;&#27169; (13% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#35069;&#21697;&#35373;&#35336;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12522;&#12531;&#12464; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -150,11 +150,9 @@
 <ul><li>Model vytvo&#345;en&yacute; b&#283;hem tohoto cvi&#269;en&iacute;: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.FCStd</a></li></ul>
 <p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">The Sketcher</a></li>
-<li><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">The Part Design Workbench</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/hamish2014/FreeCAD_assembly2">The Assembly2 Workbench</a></li></ul>
-</div>
+<ul><li><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a></li>
+<li><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; plocha Part Design</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/hamish2014/FreeCAD_assembly2">Pracovn&iacute; plocha Assembly2</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -166,29 +164,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112122942
+Cached time: 20260112123134
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.130 seconds
-Real time usage: 0.179 seconds
-Preprocessor visited node count: 73/1000000
+CPU time usage: 0.108 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 72/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2703/5000000 bytes
+Unstrip post&#8208;expand size: 2707/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.100      1 -total
- 67.40%    6.134      1 Template:Manual:TOC
- 50.89%    4.631      1 Manual:Summary/cs
- 28.54%    2.597      2 Template:Docnav
+100.00%    8.074      1 -total
+ 71.13%    5.743      1 Template:Manual:TOC
+ 54.68%    4.415      1 Manual:Summary/cs
+ 24.52%    1.980      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112122942 and revision id 1737450. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112123134 and revision id 1737454. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
