--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -68,7 +68,7 @@
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>Jedn&iacute;m z hlavn&iacute;ch &uacute;&#269;el&#367; FreeCADu je navrhovat objekty, kter&eacute; lze p&#345;em&#283;nit na re&aacute;ln&eacute; fyzick&eacute; produkty. Tyto n&aacute;vrhy lze sd&iacute;let s ostatn&iacute;mi pro v&yacute;robu nebo, st&aacute;le &#269;ast&#283;ji, exportovat p&#345;&iacute;mo do <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/3D_printing">3D tisk&aacute;ren</a> nebo do <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Milling_%28machining%29">CNC fr&eacute;zek a CNC stroj&#367;</a> pro automatizovanou v&yacute;robu. S FreeCADem m&#367;&#382;ete vytv&aacute;&#345;et p&#345;esn&eacute; a detailn&iacute; modely, kter&eacute; jsou p&#345;ipraveny pro r&#367;zn&eacute; v&yacute;robn&iacute; metody. Tato kapitola v&aacute;s provede procesem p&#345;&iacute;pravy va&scaron;ich model&#367; pro tyto stroje a zajist&iacute;, &#382;e spl&#328;uj&iacute; nezbytn&eacute; specifikace pro &uacute;sp&#283;&scaron;nou v&yacute;robu, a&#357; u&#382; pracujete s t&yacute;mem nebo cel&yacute; proces zvl&aacute;d&aacute;te sami.
-</p><p>If you've been careful while modeling, most of the challenges associated with 3D printing your model should already be minimized. The key aspects to focus on include:
+</p><p>Pokud jste p&#345;i modelov&aacute;n&iacute; postupovali opatrn&#283;, v&#283;t&scaron;ina probl&eacute;m&#367; spojen&yacute;ch s 3D tiskem va&scaron;eho modelu by ji&#382; m&#283;la b&yacute;t minimalizov&aacute;na. Mezi kl&iacute;&#269;ov&eacute; aspekty, na kter&eacute; je t&#345;eba se zam&#283;&#345;it, pat&#345;&iacute;:
 </p>
 <ul><li><b>Ensuring Your Objects Are Solid</b>: Just like real-world objects, your 3D models must be solid. FreeCAD, especially within the PartDesign Workbench, helps you ensure that your models remain solid throughout the design process. The software will notify you if an operation compromises the solid nature of the object. Additionally, the Part Workbench offers a <span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Check Geometry</a> tool, which allows you to identify potential defects or issues that might interfere with the 3D printing process.</li></ul>
 <ul><li><b>Confirming the Accuracy of Dimensions</b>: Precision is critical&mdash;what you design in FreeCAD will translate directly to real-world measurements. A millimeter in FreeCAD is a millimeter in the physical object, so each dimension must be carefully considered and verified to ensure accuracy.</li></ul>
@@ -175,12 +175,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112125235
+Cached time: 20260112125317
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.146 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -191,13 +191,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.851      1 -total
- 76.87%    9.878      1 Template:Manual:TOC
- 63.19%    8.121      1 Manual:Summary/cs
- 19.99%    2.569      2 Template:Docnav
+100.00%   16.546      1 -total
+ 67.90%   11.235      1 Template:Manual:TOC
+ 35.75%    5.915      1 Manual:Summary/cs
+ 27.68%    4.580      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112125234 and revision id 1737481. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112125317 and revision id 1737483. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
